[RM] Bug #58566. Process outputs have been redirected to the files.
Changes have been made to avoid process termination with Broke Pipe signal because of closed output streams.

Change-Id: I20c5d1fc833cd94a2c2358158838b69cee2f4ee0